Fix: Padding below path header
When we increased the line height to 2em,
it increased the padding below the path
header as well, and it was a bit too much.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,7 +153,7 @@ h3 {
 	
 	margin: 0;
 	padding: 0;
-	padding-bottom: 2.5em;
+	padding-bottom: 1.73em;
 	padding-left: 1.75ex;
 }
 
